Fixed button on mobile hopefully

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -55,6 +55,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 .navbar-toggle {
   margin-top: 23px;
+  z-index: 99;
 }
 
 /* Bottom footer */
